fixed mobile spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ body {
   background-position: center;
   background-size: cover;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 h4 {
